force-app/main/default/objects/AI_Card_Configuration__c/AI_Card_Configuration__c.object-meta.xml
<CustomObject>
    <label>Card Configuration</label>
    <nameField>
        <label>AI Card Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Card Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>