force-app/main/default/objects/AI_Card_Configuration__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMODL</fullName>
                <default>true</default>
                <label>AI Model</label>
            </value>
            <value>
                <fullName>CTLOG</fullName>
                <label>Catalog</label>
            </value>
            <value>
                <fullName>APIDS</fullName>
                <label>API Data Source</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>