force-app/main/default/objects/AI_Card_Configuration__c/fields/Icon_Details__c.field-meta.xml
<CustomField>
    <fullName>Icon_Details__c</fullName>
    <label>Icon Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>