force-app/main/default/objects/AI_Card_Configuration__c/listViews/Catalog.listView-meta.xml
<ListView>
    <fullName>Catalog</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Enabled__c</columns>
    <columns>Feature__c</columns>
    <columns>Icon_Details__c</columns>
    <columns>Icon_Source__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Feature__c</field>
        <operation>equals</operation>
        <value>CTLOG</value>
    </filters>
    <label>Catalog</label>
</ListView>